--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>About | David Fafard</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -17,10 +18,12 @@
 
 <section class="content">
   <h2>About the Artist</h2>
+
   <p>
-    David Fafard is a Parisian native born on January 24, 1964.  
-    With over three decades of professional experience, he relocated to the United States
-    to expand his artistic horizons and establish a distinguished international presence.
+    David Fafard is a Parisian native born on January 24, 1964.
+    With over three decades of professional experience, he relocated
+    to the United States to expand his artistic horizons and establish
+    a distinguished international presence.
   </p>
 
   <p>
@@ -35,6 +38,14 @@
   </p>
 </section>
 
-<footer>© 2025 David Fafard Sculptures</footer>
+<!-- Main sculpture image -->
+<section class="main-image">
+  <img src="images/IMG_0013.png" alt="Sculpture by David Fafard">
+</section>
+
+<footer>
+  © 2025 David Fafard Sculptures
+</footer>
+
 </body>
 </html>
