--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 
 <!-- Main sculpture image -->
 <section class="main-image">
-  <img src="images/IMG_0013.png" alt="Sculpture by David Fafard">
+  <img src="images/IMG_0013.PNG" alt="Sculpture by David Fafard">
 </section>
 
 <footer>
