--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,116 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Portfolio | David Fafard</title>
-  <link rel="stylesheet" href="style.css">
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Helvetica Neue", Arial, sans-serif;
+    }
+
+    body {
+      background: #0e0e0e;
+      color: #ffffff;
+      min-height: 100vh;
+    }
+
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background: rgba(0, 0, 0, 0.7);
+      position: fixed;
+      width: 100%;
+      z-index: 10;
+    }
+
+    nav h1 {
+      font-size: 1.4rem;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 25px;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #ffffff;
+      opacity: 0.8;
+      transition: opacity 0.3s;
+    }
+
+    nav a:hover {
+      opacity: 1;
+    }
+
+    .slideshow-container {
+      height: 100vh;
+      width: 100%;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .slide {
+      position: absolute;
+      inset: 0;
+      opacity: 0;
+      transition: opacity 1s ease;
+    }
+
+    .slide.active {
+      opacity: 1;
+    }
+
+    .slide img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      background: #000;
+    }
+
+    .controls {
+      position: absolute;
+      bottom: 40px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      z-index: 5;
+    }
+
+    .controls button {
+      background: rgba(255, 255, 255, 0.15);
+      border: none;
+      color: white;
+      font-size: 1.5rem;
+      padding: 12px 20px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .controls button:hover {
+      background: rgba(255, 255, 255, 0.35);
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.8rem;
+      background: #000;
+      opacity: 0.7;
+    }
+  </style>
 </head>
+
 <body>
 
 <nav>
@@ -15,35 +122,60 @@
   </ul>
 </nav>
 
-<section class="gallery" id="gallery">
-  <!-- Images will load here automatically -->
-</section>
+<section class="slideshow-container" id="slideshow"></section>
 
-<script>
-const gallery = document.getElementById('gallery');
-
-// Automatically fetch the GitHub folder listing
-fetch('images/')
-  .then(response => response.text())
-  .then(data => {
-    // Parse the HTML of the folder listing
-    const parser = new DOMParser();
-    const doc = parser.parseFromString(data, 'text/html');
-    const links = Array.from(doc.querySelectorAll('a'))
-      .map(a => a.getAttribute('href'))
-      .filter(href => href.match(/\.(jpg|jpeg|png|gif)$/i)); // only images
-
-    // Add each image to the gallery
-    links.forEach(img => {
-      const imageElement = document.createElement('img');
-      imageElement.src = 'images/' + img;
-      imageElement.alt = img.split('.')[0];
-      gallery.appendChild(imageElement);
-    });
-  })
-  .catch(err => console.error('Error loading images:', err));
-</script>
+<div class="controls">
+  <button id="prev">‹</button>
+  <button id="next">›</button>
+</div>
 
 <footer>© 2025 David Fafard Sculptures</footer>
+
+<script>
+  const images = [
+    "IMG_0012.PNG",
+    "IMG_0013.PNG",
+    "IMG_0014.PNG",
+    "IMG_0016.PNG",
+    "IMG_0019.PNG",
+    "IMG_0020.PNG",
+    "IMG_0022PNG"
+  ];
+
+  const slideshow = document.getElementById("slideshow");
+  let currentIndex = 0;
+  let slides = [];
+
+  images.forEach((file, index) => {
+    const slide = document.createElement("div");
+    slide.className = "slide" + (index === 0 ? " active" : "");
+    slide.innerHTML = `<img src="images/${file}" alt="${file}">`;
+    slideshow.appendChild(slide);
+    slides.push(slide);
+  });
+
+  function showSlide(index) {
+    slides.forEach(slide => slide.classList.remove("active"));
+    slides[index].classList.add("active");
+  }
+
+  document.getElementById("next").addEventListener("click", () => {
+    currentIndex = (currentIndex + 1) % slides.length;
+    showSlide(currentIndex);
+  });
+
+  document.getElementById("prev").addEventListener("click", () => {
+    currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+    showSlide(currentIndex);
+  });
+
+  // Auto-play
+  setInterval(() => {
+    currentIndex = (currentIndex + 1) % slides.length;
+    showSlide(currentIndex);
+  }, 6000);
+</script>
+
 </body>
 </html>
+
