--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
       text-transform: uppercase;
     }
 
+    /* CLICKABLE LOGO */
+    .logo-link {
+      text-decoration: none;
+      color: white;
+      letter-spacing: 3px;
+      transition: opacity 0.3s;
+    }
+
+    .logo-link:hover {
+      opacity: 0.85;
+    }
+
     nav ul {
       list-style: none;
       display: flex;
@@ -149,8 +161,11 @@
 
 <body>
 
+<!-- NAVIGATION -->
 <nav>
-  <h1>David Fafard</h1>
+  <h1>
+    <a href="about.html" class="logo-link">David Fafard</a>
+  </h1>
   <ul>
     <li><a href="about.html">About</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
@@ -158,6 +173,7 @@
   </ul>
 </nav>
 
+<!-- HERO -->
 <header class="hero">
   <h2>Master Sculptor of Timeless Forms</h2>
   <p>
@@ -166,6 +182,7 @@
   </p>
 </header>
 
+<!-- FEATURE -->
 <section class="feature">
   <div class="feature-card" onclick="window.location.href='portfolio.html'">
     <h3>International Fine Art</h3>
@@ -174,11 +191,12 @@
       and galleries across the world.
     </p>
 
-    <!-- IMAGE IS NOW BENEATH TEXT -->
+    <!-- IMAGE UNDER TEXT -->
     <img src="images/IMG_0012.PNG" alt="Bronze Sculpture by David Fafard">
   </div>
 </section>
 
+<!-- ACTIONS -->
 <div class="actions">
   <a href="portfolio.html">View Portfolio</a>
   <a href="contact.html">Commission Inquiry</a>
@@ -190,5 +208,6 @@
 
 </body>
 </html>
+
 
 
