--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,7 @@
     "IMG_0013.PNG",
     "IMG_0014.PNG",
     "IMG_0016.PNG",
-    "IMG_0019.PNG",
+    "IMG_0019.jpg",
     "IMG_0020.PNG",
     "IMG_0022PNG"
   ];
