--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,91 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Contact | David Fafard</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
 
-<nav>
-  <h1>David Fafard</h1>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="portfolio.html">Portfolio</a></li>
-  </ul>
-</nav>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Helvetica Neue", Arial, sans-serif;
+    }
 
-<section class="content">
-  <h2>Contact</h2>
-  <p>Email: <strong>info@davidfafardsculptures.com</strong></p>
-  <p>Phone: <strong>205-284-0539</strong></p>
-</section>
+    body {
+      background: #0c0c0c;
+      color: #ffffff;
+      line-height: 1.6;
+    }
 
-<footer>© 2025 David Fafard Sculptures</footer>
-</body>
-</html>
+    /* NAVIGATION */
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 24px 48px;
+      background: rgba(0,0,0,0.75);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+
+    nav h1 {
+      font-size: 1.5rem;
+      letter-spacing: 3px;
+      text-transform: uppercase;
+    }
+
+    .logo-link {
+      text-decoration: none;
+      color: white;
+      transition: opacity 0.3s;
+    }
+
+    .logo-link:hover {
+      opacity: 0.85;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 30px;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: white;
+      opacity: 0.8;
+      transition: opacity 0.3s;
+    }
+
+    nav a:hover {
+      opacity: 1;
+    }
+
+    /* PAGE HEADER */
+    .page-header {
+      text-align: center;
+      padding: 100px 20px 60px;
+    }
+
+    .page-header h2 {
+      font-size: 3rem;
+      font-weight: 300;
+      letter-spacing: 2px;
+      margin-bottom: 20px;
+    }
+
+    .page-header p {
+      max-width: 700px;
+      margin: 0 auto;
+      opacity: 0.75;
+      font-size: 1.1rem;
+    }
+
+    /* CONTACT SECTION */
+    .contact-container {
+      max-width: 900px;
+      margin: 0 auto 100px;
+      pa
+
