--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
-<html>
-<body style="background:black;color:white;">
-  <h1>CONTACT PAGE TEST</h1>
-</body>
-</html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Contact | David Fafard</title>
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #0c0c0c;
+      color: white;
+    }
+
+    /* NAVIGATION */
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background: #000;
+    }
+
+    nav h1 a {
+      color: white;
+      text-deco
+
 
 
