--- a/contact.html
+++ b/contact.html
@@ -3,27 +3,111 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact | David Fafard</title>
-
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0c0c0c;
-      color: white;
-    }
+    /* BASIC RESET */
+    * { margin:0; padding:0; box-sizing:border-box; font-family: Arial, sans-serif; }
+
+    body { background: #0c0c0c; color: white; }
 
     /* NAVIGATION */
     nav {
-      display: flex;
+      display:flex;
       justify-content: space-between;
-      align-items: center;
-      padding: 20px 40px;
+      align-items:center;
+      padding:20px 40px;
       background: #000;
     }
-
     nav h1 a {
       color: white;
-      text-deco
+      text-decoration: none;
+      font-size: 1.4rem;
+      letter-spacing: 2px;
+      transition: opacity 0.3s;
+    }
+    nav h1 a:hover { opacity:0.8; }
+    nav ul { list-style:none; display:flex; gap:20px; }
+    nav ul a { color:white; text-decoration:none; transition:opacity 0.3s; }
+    nav ul a:hover { opacity:0.8; }
 
+    /* HEADER */
+    header {
+      text-align:center;
+      padding: 60px 20px 40px;
+    }
+    header h2 { font-size:2.5rem; margin-bottom:15px; font-weight:300; }
+    header p { font-size:1.1rem; opacity:0.8; }
 
+    /* CONTACT CARDS */
+    .cards {
+      display:flex;
+      gap:30px;
+      justify-content:center;
+      flex-wrap:wrap;
+      max-width:800px;
+      margin:0 auto 80px;
+      padding:0 20px;
+    }
+    .card {
+      border:1px solid rgba(255,255,255,0.2);
+      padding:40px;
+      width:260px;
+      text-align:center;
+      cursor:pointer;
+      transition: transform 0.3s, background 0.3s;
+    }
+    .card:hover {
+      transform: translateY(-10px);
+      background: rgba(255,255,255,0.05);
+    }
+    .card h3 { font-size:1.4rem; margin-bottom:10px; }
+    .card a { color:white; text-decoration:none; }
+    .card a:hover { text-decoration:underline; }
 
+    /* FOOTER */
+    footer {
+      text-align:center;
+      padding:20px;
+      background:#000;
+      font-size:0.8rem;
+      opacity:0.7;
+    }
+  </style>
+</head>
+
+<body>
+
+<!-- NAVIGATION -->
+<nav>
+  <h1><a href="about.html">David Fafard</a></h1>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="portfolio.html">Portfolio</a></li>
+  </ul>
+</nav>
+
+<!-- HEADER -->
+<header>
+  <h2>Contact</h2>
+  <p>For commissions, inquiries, or private acquisitions, please use the contacts below.</p>
+</header>
+
+<!-- CONTACT CARDS -->
+<section class="cards">
+  <div class="card" onclick="window.location.href='mailto:info@davidfafardsculptures.com'">
+    <h3>Email</h3>
+    <p><a href="mailto:info@davidfafardsculptures.com">info@davidfafardsculptures.com</a></p>
+  </div>
+  <div class="card" onclick="window.location.href='tel:12052840539'">
+    <h3>Phone</h3>
+    <p><a href="tel:12052840539">205-284-0539</a></p>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer>
+  © 2025 David Fafard Sculptures
+</footer>
+
+</body>
+</html>
