--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,7 @@
       background: rgba(255,255,255,0.05);
     }
     .card h3 { font-size:1.4rem; margin-bottom:10px; }
+    .card p { font-size:1rem; margin-top:5px; }
     .card a { color:white; text-decoration:none; }
     .card a:hover { text-decoration:underline; }
 
@@ -111,3 +112,4 @@
 
 </body>
 </html>
+
