--- a/portfolio.html
+++ b/portfolio.html
@@ -139,6 +139,8 @@
     "IMG_0016.PNG",
     "IMG_0019.jpg",
     "IMG_0020.PNG",
+    "IMG001.JPG" ,
+    "IMG002.JPG" ,
     "IMG_0022PNG"
   ];
 
