--- a/portfolio.html
+++ b/portfolio.html
@@ -141,6 +141,11 @@
     "IMG_0020.PNG",
     "IMG001.JPG" ,
     "IMG002.JPG" ,
+     "AA1.jpg" ,
+     "AA2.JPG" ,
+     "AA3.jpeg" ,
+     "AA4.JPG" ,
+     "AA5.JPG" ,
     "IMG_0022PNG"
   ];
 
