--- a/portfolio.html
+++ b/portfolio.html
@@ -188,6 +188,24 @@
     "AA3.jpeg",
     "AA4.JPG",
     "AA5.JPG",
+    "IMG_0138.JPG",
+    "IMG_0118.JPG",
+    "IMG_0119.JPG",
+    "IMG_0120.JPG",
+    "IMG_0121.JPG",
+    "IMG_0124.JPG",
+    "IMG_0125.JPG",
+    "IMG_0130.JPG",
+    "IMG_0131.JPG",
+    "IMG_0132.JPG",
+    "IMG_0133.JPG",
+    "IMG_0134.JPG",
+    "IMG_0135.JPG",
+    "IMG_0136.JPG",
+    "IMG_0142.JPG",
+    "IMG_0143.JPG",
+    "IMG_0144.JPG",
+    "IMG_0138.JPG",
     "IMG_0022PNG"
   ];
 
